fix spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -613,7 +613,7 @@ body {
 
 .contact-description {
 	text-align: center;
-	width: 24em;
+	width: 25em;
 	margin-bottom: 3em;
 	padding-left: 2em;
 	padding-right: 2em;
@@ -662,7 +662,7 @@ body {
 	flex-direction: column;
 	gap: 1em;
 	padding-bottom: 2em;
-	width: 23em;
+	width: 24em;
 }
 
 @media (min-width: 600px) {
@@ -764,7 +764,7 @@ body {
 	display: flex;
 	flex-direction: column;
 	gap: 0.2em;
-	width: 23em;
+	width: 24em;
 }
 
 @media (min-width: 400px) {
